<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/list_item_margin">

    <!-- Product name and price -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/list_item_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D"
            tools:text="@string/dummy_data_product_name" />

        <TextView
            android:id="@+id/list_item_product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#9FA5AC"
            tools:text="@string/dummy_data_price" />

    </LinearLayout>

    <!-- Quantity -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/list_item_quantity_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/list_item_quantity_header"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#2B3D4D"
            tools:text="@string/list_item_quantity_header" />

        <TextView
            android:id="@+id/list_item_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/quantity_circle"
            android:fontFamily="serif"
            android:gravity="center"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            tools:text="@string/dummy_data_quantity" />

    </LinearLayout>

    <!-- Sale Button -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/list_item_sale_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:text="@string/list_item_sale_button" />

    </LinearLayout>

</LinearLayout>